<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.optum.optum3_cq</groupId>
	<artifactId>OptumQAAutomation</artifactId>
	<name>QAAutomation Project</name>
	<version>1.0</version>


	<profiles>
		<profile>
			<id>test-env</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.3</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonarsource.scanner.maven</groupId>
						<artifactId>sonar-maven-plugin</artifactId>
						<version>3.6.0.1398</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>

							<properties>
								<scanWith>Foo</scanWith>
								<scan>Foo</scan>
								<sauceKey>Foo</sauceKey>
								<sauceUsername>Foo</sauceUsername>
								<remoteExecution>Foo</remoteExecution>
								<upload>foo</upload>
								<regression>foo</regression>
								<defaultExecution>foo</defaultExecution>
								<browser>foo</browser>
							</properties>
							<archive>
								<manifest>
									<mainClass>com.kub.App</mainClass>
								</manifest>
							</archive>
							<param>${scan}</param>
							<param>${upload}</param>
							<param>${sauceKey}</param>
							<param>${remoteExecution}</param>
							<param>${sauceUsername}</param>
							<param>${regression}</param>
							<param>${defaultExecution}</param>
							<para>${browser}</para>
							<para>${scanWith}</para>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M5</version>
						<configuration>

							<systemProperties>
								<!-- <log.directory>${project.basedir}\Output\${maven.build.timestamp}\Logs\</log.directory> -->
								<property>
									<name>surefire.testng.verbose</name>
									<value>10</value>
								</property>
								<property>

									<name>config-file</name>
									<value>src/test/java/runner/Config-test.properties</value>
								</property>
							</systemProperties>
							<!-- <redirectTestOutputToFile>false</redirectTestOutputToFile> -->

							<suiteXmlFiles>
								<suiteXmlFile>src/test/java/runner/testng.xml</suiteXmlFile>
							</suiteXmlFiles>

							<testFailureIgnore>true</testFailureIgnore>
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>


				</plugins>
			</build>
		</profile>


		<!--STAGING ENVIRONMENT -->
		<profile>
			<id>stag-env</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>

							<properties>
								<scanWith>Foo</scanWith>
								<scan>Foo</scan>
								<sauceKey>Foo</sauceKey>
								<sauceUsername>Foo</sauceUsername>
								<remoteExecution>Foo</remoteExecution>
								<upload>foo</upload>
								<regression>foo</regression>
								<defaultExecution>foo</defaultExecution>
								<browser>foo</browser>
							</properties>
							<archive>
								<manifest>
									<mainClass>com.kub.App</mainClass>
								</manifest>
							</archive>
							<param>${scan}</param>
							<param>${upload}</param>
							<param>${sauceKey}</param>
							<param>${remoteExecution}</param>
							<param>${sauceUsername}</param>
							<param>${regression}</param>
							<param>${defaultExecution}</param>
							<para>${browser}</para>
							<para>${scanWith}</para>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M5</version>
						<configuration>

							<systemProperties>
								<property>
									<name>surefire.testng.verbose</name>
									<value>10</value>
								</property>
								<property>

									<name>config-file</name>
									<value>src/test/java/runner/Config-stg.properties</value>
								</property>
							</systemProperties>
							<!-- <redirectTestOutputToFile>false</redirectTestOutputToFile> -->

							<suiteXmlFiles>
								<suiteXmlFile>src/test/java/runner/testng.xml</suiteXmlFile>
							</suiteXmlFiles>

							<testFailureIgnore>true</testFailureIgnore>
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>


				</plugins>
			</build>
		</profile>
		<!-- UAT ENVIRONMENT -->
		<profile>
			<id>uat-env</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<properties>
								<scanWith>Foo</scanWith>
								<scan>Foo</scan>
								<sauceKey>Foo</sauceKey>
								<sauceUsername>Foo</sauceUsername>
								<remoteExecution>Foo</remoteExecution>
								<upload>foo</upload>
								<regression>foo</regression>
								<defaultExecution>foo</defaultExecution>
								<browser>foo</browser>
							</properties>
							<archive>
								<manifest>
									<mainClass>com.kub.App</mainClass>
								</manifest>
							</archive>
							<param>${scan}</param>
							<param>${upload}</param>
							<param>${sauceKey}</param>
							<param>${remoteExecution}</param>
							<param>${sauceUsername}</param>
							<param>${regression}</param>
							<param>${defaultExecution}</param>
							<para>${browser}</para>
							<para>${scanWith}</para>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M5</version>
						<configuration>

							<systemProperties>
								<property>
									<name>surefire.testng.verbose</name>
									<value>10</value>
								</property>
								<property>

									<name>config-file</name>
									<value>src/test/java/runner/Config-uat.properties</value>
								</property>
							</systemProperties>
							<!-- <redirectTestOutputToFile>false</redirectTestOutputToFile> -->

							<suiteXmlFiles>
								<suiteXmlFile>src/test/java/runner/testng.xml</suiteXmlFile>
							</suiteXmlFiles>

							<testFailureIgnore>true</testFailureIgnore>
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>


				</plugins>
			</build>
		</profile>


		<!-- Preview -->
		<profile>
			<id>prev-env</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<properties>
								<scanWith>Foo</scanWith>
								<scan>Foo</scan>
								<sauceKey>Foo</sauceKey>
								<sauceUsername>Foo</sauceUsername>
								<remoteExecution>Foo</remoteExecution>
								<upload>foo</upload>
								<regression>foo</regression>
								<defaultExecution>foo</defaultExecution>
								<browser>foo</browser>
							</properties>
							<archive>
								<manifest>
									<mainClass>com.kub.App</mainClass>
								</manifest>
							</archive>
							<param>${scan}</param>
							<param>${upload}</param>
							<param>${sauceKey}</param>
							<param>${remoteExecution}</param>
							<param>${sauceUsername}</param>
							<param>${regression}</param>
							<param>${defaultExecution}</param>
							<para>${browser}</para>
							<para>${scanWith}</para>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M5</version>
						<configuration>

							<systemProperties>
								<property>
									<name>surefire.testng.verbose</name>
									<value>10</value>
								</property>
								<property>

									<name>config-file</name>
									<value>src/test/java/runner/Config-preview.properties</value>
								</property>
							</systemProperties>
							<!-- <redirectTestOutputToFile>false</redirectTestOutputToFile> -->

							<suiteXmlFiles>
								<suiteXmlFile>src/test/java/runner/testng.xml</suiteXmlFile>
							</suiteXmlFiles>

							<testFailureIgnore>true</testFailureIgnore>
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>


				</plugins>
			</build>
		</profile>

		<!-- Prod -->

		<profile>
			<id>prod-env</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<properties>
								<scanWith>Foo</scanWith>
								<scan>Foo</scan>
								<sauceKey>Foo</sauceKey>
								<sauceUsername>Foo</sauceUsername>
								<remoteExecution>Foo</remoteExecution>
								<upload>foo</upload>
								<regression>foo</regression>
								<defaultExecution>foo</defaultExecution>
								<browser>foo</browser>
							</properties>
							<archive>
								<manifest>
									<mainClass>com.kub.App</mainClass>
								</manifest>
							</archive>
							<param>${scan}</param>
							<param>${upload}</param>
							<param>${sauceKey}</param>
							<param>${remoteExecution}</param>
							<param>${sauceUsername}</param>
							<param>${regression}</param>
							<param>${defaultExecution}</param>
							<para>${browser}</para>
							<para>${scanWith}</para>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M5</version>
						<configuration>

							<systemProperties>
								<property>
									<name>surefire.testng.verbose</name>
									<value>10</value>
								</property>
								<property>

									<name>config-file</name>
									<value>src/test/java/runner/Config-prod.properties</value>
								</property>
							</systemProperties>
							<!-- <redirectTestOutputToFile>false</redirectTestOutputToFile> -->

							<suiteXmlFiles>
								<suiteXmlFile>src/test/java/runner/testng.xml</suiteXmlFile>
							</suiteXmlFiles>

							<testFailureIgnore>true</testFailureIgnore>
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>


				</plugins>
			</build>
		</profile>

		<!-- Dummy Profile for testing -->
		<profile>
			<id>dummy-env</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>

							<properties>
								<scanWith>Foo</scanWith>
								<scan>Foo</scan>
								<sauceKey>Foo</sauceKey>
								<sauceUsername>Foo</sauceUsername>
								<remoteExecution>Foo</remoteExecution>
								<upload>foo</upload>
								<regression>foo</regression>
								<defaultExecution>foo</defaultExecution>
								<browser>foo</browser>
							</properties>
							<archive>
								<manifest>
									<mainClass>com.kub.App</mainClass>
								</manifest>
							</archive>
							<param>${scan}</param>
							<param>${upload}</param>
							<param>${sauceKey}</param>
							<param>${remoteExecution}</param>
							<param>${sauceUsername}</param>
							<param>${regression}</param>
							<param>${defaultExecution}</param>
							<para>${browser}</para>
							<para>${scanWith}</para>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M5</version>
						<configuration>

							<systemProperties>
								<property>
									<name>surefire.testng.verbose</name>
									<value>10</value>
								</property>
								<property>

									<name>config-file</name>
									<value>src/test/java/runner/Config-test.properties</value>
								</property>
							</systemProperties>
							<!-- <redirectTestOutputToFile>false</redirectTestOutputToFile> -->

							<suiteXmlFiles>
								<suiteXmlFile>src/test/java/runner/testng2.xml</suiteXmlFile>
							</suiteXmlFiles>

							<testFailureIgnore>true</testFailureIgnore>
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>


				</plugins>
			</build>
		</profile>


	</profiles>


	<dependencies>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.8.8</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
		</dependency>





		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>



		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.23</version>
		</dependency>


		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.2</version>
		</dependency>

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>4.0.0</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.github.rockswang</groupId>
			<artifactId>java-curl</artifactId>
			<version>1.2.2.2</version>
		</dependency>

		<dependency>
			<groupId>ru.yandex.qatools.ashot</groupId>
			<artifactId>ashot</artifactId>
			<version>1.5.4</version>
		</dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.13.1</version>
		</dependency>
<<<<<<< Updated upstream
		
		<dependency>
            <groupId>jcifs</groupId>
            <artifactId>jcifs</artifactId>
            <version>1.3.17</version>
        </dependency>

=======
	
	
>>>>>>> Stashed changes
	</dependencies>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>
